--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_dotenv: ^5.0.2
   splashscreen: ^1.2.0
   percent_indicator:
   font_awesome_flutter: ^8.5.0
@@ -75,6 +76,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/SplashScreen/SplashScreen.gif
     - assets/Bmi/bmi.jpg
     - assets/Bmi/heart.jpg
